--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://github.com/dmlc/HalideIR
 [submodule "dlpack"]
 	path = dlpack
-	url = https://github.com/dmlc/dlpack
+	url = http://github.com/sidedish/dlpack
