Add Sophon Module.

--- a/apps/howto_deploy/Makefile
+++ b/apps/howto_deploy/Makefile
@@ -12,7 +12,7 @@ PKG_LDFLAGS = -L${TVM_ROOT}/lib -ldl -lpthread
 
 .PHONY: clean all
 
-all: lib/cpp_deploy_pack lib/cpp_deploy_normal
+all: lib/cpp_deploy_pack lib/cpp_deploy_normal lib/sophon_deploy
 
 # Build rule for all in one TVM package library
 lib/libtvm_runtime_pack.o: tvm_runtime_pack.cc
@@ -30,5 +30,10 @@ lib/cpp_deploy_pack: cpp_deploy.cc lib/test_addone_sys.o lib/libtvm_runtime_pack
 
 # Deploy using pre-built libtvm_runtime.so
 lib/cpp_deploy_normal: cpp_deploy.cc lib/test_addone_sys.o
+	@mkdir -p $(@D)
+	$(CXX) $(PKG_CFLAGS) -o $@  $^ $(PKG_LDFLAGS) -ltvm_runtime
+
+# Deploy sophon module using pre-built libtvm_runtime.so
+lib/sophon_deploy: sophon_deploy.cc lib/test_addone_sys.o
 	@mkdir -p $(@D)
 	$(CXX) $(PKG_CFLAGS) -o $@  $^ $(PKG_LDFLAGS) -ltvm_runtime
